# CmakeTest

./: CMakeLists.txt  h.h
lib1/: CMakeLists.txt  c2.cpp  h2.h
